tests/errors/syntax.unterminated curly string.res
>> Syntax | File: syntax.unterminated curly string.art
    error | Line: 5
          | 
          | unterminated curly string
          | 
          | near:    done } this { something els...
          |                      ^